--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New 2024</title>
     <link rel="stylesheet" href="css/style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-
+    <header class="middle-section">
+         <h3 class="new-year">Happy New Year</h3>
+         <h1 class="new-year-title">New Year Party Celebration</h1>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
