--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
          <h3 class="new-year">Happy New Year</h3>
          <h1 class="new-year-title">New Year Party Celebration</h1>
     </header>
-    <main>
+    <main class="middle-section">
+        <section class="discount">
+            <h1 class="discount-title">65% OFF</h1>
+            <p class="discount-description">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3 class="discount-categories text-title">ALL CATEGORIES</h3>
+            <img src="/resources/New Year Photo.png" alt="New year">
+        </section>
+        <section>
+            <h1 class="party-title">Welcome to midnight party</h1>
+            <p class="party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <button>Join Now</button>
+        </section>
 
     </main>
     <footer>
