added party section

--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
             <h3 class="discount-categories text-title">ALL CATEGORIES</h3>
             <img src="/resources/New Year Photo.png" alt="New year">
         </section>
+        
         <section>
-            <h1 class="party-title">Welcome to midnight party</h1>
+            <div class="party-container">
+                <div class="party-colum">
+                    <h1 class="party-title">Welcome to midnight party</h1>
             <p class="party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            <button>Join Now</button>
+            <button class="btn">Join Now</button>
+                </div>
+                <div class="party-colum2">
+                    <img src="/resources/Group 70.png" alt="2024 year">
+                </div>
+            </div>
         </section>
-
     </main>
     <footer>
 
