--- a/index.html
+++ b/index.html
@@ -30,10 +30,24 @@
             <button class="btn">Join Now</button>
                 </div>
                 <div class="party-colum2">
-                    <img src="/resources/Group 70.png" alt="2024 year">
+                    <img src="/resources/Group_70- (1).png" alt="2024 year">
                 </div>
             </div>
         </section>
+          <section>
+            <div class="time-container">
+                <div class="place">
+                    <h5><span>Place:</span> New Park Hotel <br>
+                        <span>Date:</span> 31 December Night 2023 <br>
+                        <span>Time:</span> Evening 7.30 pm to 12.30 am</h5> <br>
+                </div>
+                <button class="btn">Join Now</button>
+            </div>
+          </section>
+          <section>
+            
+          </section>
+
     </main>
     <footer>
 
