added best offer section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,30 @@
                 <button class="btn">Join Now</button>
             </div>
           </section>
+
           <section>
-            
+               <div class="best-offer-container">
+
+                <div class="best-offer-colum">
+                    <h4 class="best-offer-subtitle">NEW BEST OFFER</h4>
+                    <h3 class="best-offer-title text-title2">Coming Soon</h3>
+                    <p class="best-offer-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                </div>
+
+                <div class="best-offer-colum">
+                    <div class="ellipse1">
+                        <img src="/resources/Ellipse 1.png" alt="Ellipse">
+                    </div>
+                </div>
+
+                <div class="best-offer-colum">
+                    <h3 class="best-offer-title text-title">2024</h3>
+                    <p class="best-offer-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="/resources/Group 96.png" alt="happy new year" title="Happy new year">
+                </div>
+
+               </div>
+
           </section>
 
     </main>
