holiday sale section added

--- a/index.html
+++ b/index.html
@@ -65,10 +65,30 @@
                     <p class="best-offer-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                     <img src="/resources/Group 96.png" alt="happy new year" title="Happy new year">
                 </div>
-
                </div>
-
           </section>
+            
+          <section>
+            <div class="holiday-sale-container">
+                  <h4 class="holiday-subtitle">WHAT IS FUNCTIONAL</h4>
+                  <h2 class="holiday-title"><span>Holidays</span> Sale 50%</h2>
+                  <p class="holiday-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+            
+            <div class="holiday-images-container">
+                <div class="images-up">
+                    <img class="Box" src="/resources/Group 75.png" alt="Box image" width="720px">
+                <img class="discount-banner" src="/resources/Group 44.png" alt="discount banner">
+                <img class="girl" src="/resources/Rectangle 1.png" alt="girl" width ="440px" 
+                height="433px">
+                </div>
+               <div class="images-down">
+                <img src="/resources/Rectangle 2.png" alt="red">
+               </div>
+            </div>
+        </div>
+          </section>
+
 
     </main>
     <footer>
