added gift portfolio

--- a/index.html
+++ b/index.html
@@ -88,7 +88,32 @@
             </div>
         </div>
           </section>
+         
+          <section>
+              <div class="git-portfolio-container">
+                <div class="gift-portfolio-header">
+                    <h4 class="portfolio-subtitle">THE BEST GIFTS</h4>
+                    <h3 class="portfolio-title text-title2">Our Awesome Portfolio</h3>
+                    <p class="portfolio-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                </div>
+                <div class="gift-portfolio-images">
+                    <div class="portfolio-images-row">
+                        <img src="/resources/Rectangle 3.png" alt="images" title="Rectangle3">
+                        <img src="/resources/Rectangle 4.png" alt="images" title="Rectangle4">
+                        <img src="/resources/Rectangle 5.png" alt="images" title="Rectangle5">
+                    </div>
+                    <div class="portfolio-images-row">
+                        <img src="/resources/Rectangle 6.png" alt="images" title="Rectangle6">
+                        <img src="/resources/Rectangle 7.png" alt="images" title="Rectangle7">
+                        <img src="/resources/Rectangle 8.png" alt="images" title="Rectangle8">
+                    </div>
+                </div>
+              </div>
+          </section>
 
+          <section>
+            
+          </section>
 
     </main>
     <footer>
