--- a/index.html
+++ b/index.html
@@ -110,9 +110,17 @@
                 </div>
               </div>
           </section>
-
+          
           <section>
-            
+            <div class="newsletter-container">
+                <img src="/resources/Group 61.png" alt="Email image">
+                <h3 class="newsletter-title text-title2" >Subscribe Newsletter</h3>
+                <p class="newsletter-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <div class="input-btn">
+                   <input type="email" name="email" id="" placeholder="user@gmail.com">       
+                   <button class="btn-email">subscribe</button> 
+                </div>
+             </div>    
           </section>
 
     </main>
