added footer and final

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="best-offer-colum">
-                    <h3 class="best-offer-title text-title">2024</h3>
+                    <h3 class="best-offer-title2 text-title">2024</h3>
                     <p class="best-offer-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                     <img src="/resources/Group 96.png" alt="happy new year" title="Happy new year">
                 </div>
@@ -118,14 +118,45 @@
                 <p class="newsletter-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <div class="input-btn">
                    <input type="email" name="email" id="" placeholder="user@gmail.com">       
-                   <button class="btn-email">subscribe</button> 
+                   <button class="btn-email">Subscribe</button> 
                 </div>
              </div>    
           </section>
 
     </main>
     <footer>
-
+        <div class="contact-us-container">
+            <div class="contact-us-row">
+                <div class="contact-us-row1">
+                    <p class="text-title3">44, Big Building Roosevelt Street
+                        Beach Gardens Florida 33410</p>
+                </div>
+                <div class="contact-us-row2">
+                    <div class="contact-icon">
+                        <img src="/resources/Call.png" alt="call-icon">
+                        <h4 class="text-title3">+00 123 584 124</h4>
+                    </div>
+                    <div class="contact-icon">
+                        <img src="/resources/Website.png" alt="web-icon">
+                        <h4 class="text-title3">www.website.com</h4>
+                    </div>  
+                </div>
+            </div>
+            <hr>
+            <div class="contact-us-row3">
+              <img src="/resources/Facebook.png" alt="facebook">
+              <img src="/resources/Instagram.png" alt="Instagram">
+              <img src="/resources/Twitter.png" alt="Twitter">
+              <img src="/resources/Linkedin.png" alt="Linkedin">
+            </div>
+            <hr>
+            <div class="contact-us-row">
+                <div class="contact-us-row4">
+                    <h4>2024, All Rights Reserved.</h4>
+                </div>
+                <div class="contact-us-row5"><h4>Unsubscribe</h4></div>
+            </div>
+        </div>
     </footer>
     
 </body>
