fixed issue again

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="holiday-images-container">
                 <div class="images-up">
                     <img class="Box" src="resources/Group 75.png" alt="Box image" width="720px">
-                <img class="discount-banner" src="/resources/Group 44.png" alt="discount banner">
+                <img class="discount-banner" src="resources/Group 44.png" alt="discount banner">
                 <img class="girl" src="resources/Rectangle 1.png" alt="girl" width ="440px" 
                 height="433px">
                 </div>
