added fixed text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="party-container">
                 <div class="party-colum">
                     <h1 class="party-title">Welcome to midnight party</h1>
-            <p class="party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p class="party-description">"Welcome everyone, to the grand midnight party! Let's bid farewell to the old and usher in the New Year together!" </p>
             <button class="btn">Join Now</button>
                 </div>
                 <div class="party-colum2">
@@ -51,7 +51,7 @@
                 <div class="best-offer-colum">
                     <h4 class="best-offer-subtitle">NEW BEST OFFER</h4>
                     <h3 class="best-offer-title text-title2">Coming Soon</h3>
-                    <p class="best-offer-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                    <p class="best-offer-description text-paragraph">"New Year, new beginnings! Stay tuned for our best offers yet, coming soon. Exciting deals and surprises await you!"</p>
                 </div>
 
                 <div class="best-offer-colum">
@@ -62,7 +62,7 @@
 
                 <div class="best-offer-colum">
                     <h3 class="best-offer-title2 text-title">2024</h3>
-                    <p class="best-offer-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <p class="best-offer-description text-paragraph">"Welcome 2024! Embrace new beginnings and endless possibilities."</p>
                     <img src="resources/Group 96.png" alt="happy new year" title="Happy new year">
                 </div>
                </div>
@@ -72,8 +72,7 @@
             <div class="holiday-sale-container">
                   <h4 class="holiday-subtitle">WHAT IS FUNCTIONAL</h4>
                   <h2 class="holiday-title"><span>Holidays</span> Sale 50%</h2>
-                  <p class="holiday-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+                  <p class="holiday-description text-paragraph">"Step into the holiday spirit with our spectacular sale! Discover amazing deals on a wide range of products. Whether you're looking for the perfect gift or treating yourself, we've got you covered. Don't miss this opportunity to save big and celebrate the season in style. Hurry, these incredible offers won't last long!"</p>
             
             <div class="holiday-images-container">
                 <div class="images-up">
@@ -94,7 +93,7 @@
                 <div class="gift-portfolio-header">
                     <h4 class="portfolio-subtitle">THE BEST GIFTS</h4>
                     <h3 class="portfolio-title text-title2">Our Awesome Portfolio</h3>
-                    <p class="portfolio-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                    <p class="portfolio-description text-paragraph">"The best gift is time spent with loved ones, creating memories that last a lifetime. Cherish these moments together."</p>
                 </div>
                 <div class="gift-portfolio-images">
                     <div class="portfolio-images-row">
@@ -115,7 +114,7 @@
             <div class="newsletter-container">
                 <img src="resources/Group 61.png" alt="Email image">
                 <h3 class="newsletter-title text-title2" >Subscribe Newsletter</h3>
-                <p class="newsletter-description text-paragraph">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="newsletter-description text-paragraph">"Stay informed and inspired! Subscribe to our newsletter for the latest updates, exclusive offers, and exciting news. Join us now!"</p>
                 <div class="input-btn">
                    <input type="email" name="email" id="" placeholder="user@gmail.com">       
                    <button class="btn-email">Subscribe</button> 
